# doc-intel-api

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  config.yaml  docker-compose.yml  fix_process_test.py  fix_rate_limits.py  fix_task_processor.py  fix_test.py  fix_test2.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  test_fail.txt  test_fail2.txt  test_fail3.txt  test_fail4.txt  test_fail5.txt  test_fail6.txt  test_out.txt  test_output.txt  test_output2.txt  test_output3.txt  test_output4.txt  test_rate.txt
.github/workflows/: ci.yml
.superpowers/sdd/reports/: task-1-report.md  task-2-report.md  task-3-report.md
.superpowers/sdd/reviews/: task-1-diff.txt  task-2-diff.txt  task-2-review.md
alembic/: env.py  script.py.mako
alembic/versions/: 20260713_1228_c99ffe044aab_initial_schema.py
app/: __init__.py  config.py  constants.py  database.py  exceptions.py  logging.py  main.py  telemetry.py
app/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
app/models/: __init__.py  analysis.py  api_key.py  document.py
app/routes/: __init__.py  auth.py  health.py  process.py  query.py  upload.py
app/schemas/: __init__.py  analysis.py  auth.py  common.py  document.py
app/security/: __init__.py  headers.py  validation.py
app/services/: __init__.py  extractor.py  llm.py  storage.py
app/tasks/: __init__.py  processor.py
docs/: architecture.md
docs/adr/: 001-async-architecture.md  002-azure-integrations.md  003-api-key-auth.md  004-background-processing.md  005-observability.md  006-pydantic-v2.md
docs/superpowers/plans/: 2026-07-13-document-intelligence-api.md
tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_database.py  test_database_module.py  test_exceptions.py  test_extractor.py  test_llm.py  test_logging.py  test_middleware.py  test_rate_limit.py  test_rate_limiter_debug.py  test_rate_limiter_debug2.py  test_routes_auth.py  test_routes_health.py  test_routes_process.py  test_routes_query.py  test_routes_upload.py  test_schemas.py  test_security_validation.py  test_storage.py  test_tasks_processor.py  test_telemetry.py
